script/k8s/errbot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: errbot
  name: errbot
  labels:
    name: errbot
spec:
  replicas: 1
  selector:
    matchLabels:
      name: errbot
  template:
    metadata:
      labels:
        name: errbot
      annotations:
        seccompProfile.security.alpha.kubernetes.io/pod: runtime/default
    spec:
      containers:
        - name: errbot
          image: errbot:latest
          imagePullPolicy: Never # since we are using a local image in minikube
          resources:
            limits:
              cpu: "2"
              memory: "8Gi"
            requests:
              cpu: "1"
              memory: "400Mi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            runAsNonRoot: true
            runAsUser: 10001
      automountServiceAccountToken: false
  strategy: {}
